infra/monitoring/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    kubernetes.io/metadata.name: monitoring
    monitoring: "true"
